--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "npm": "^8.0.0"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "@tonejs/midi": "^2.0.28",
+    "sass": "^1.53.0",
+    "scss": "^0.2.4",
+    "tone": "^14.7.77",
+    "vue": "^3.2.37",
+    "webaudio-tinysynth": "^1.1.3"
   },
   "devDependencies": {
     "@netless/fastboard": "^0.3.3",
