feat: update package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "app-midi-board",
-  "version": "0.1.0",
-  "description": "MIDI Board - A Netless app for Musician, MIDI maker and Music educator",
-  "private": true,
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
+  "version": "0.5.0",
+  "description": "MIDI Board - A Netless app for Musicians, MIDI makers and Music educators",
+  "private": false,
+  "main": "src/index.ts",
   "files": [
-    "src",
-    "dist"
+    "src"
   ],
   "scripts": {
     "start": "vite",
